kuch nahi hua hai

--- a/Reg2/.classpath
+++ b/Reg2/.classpath
@@ -29,5 +29,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/vshadmin/Downloads/jstl-1.2.jar/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
